# explore_design

./: .gitignore  LICENSE  README.md  plot_Eu_ch.py  plot_fmri_surprise.py  plot_surprise.py  pyproject.toml
examples/: button_check.py  concat_img_files.py  glm_second_level.py  motor_glm_second_level.py  plot_Er.py  plot_Eu_ch.py  plot_Pe.py  plot_fmri_Er.py  plot_fmri_Eu_ch.py  plot_fmri_Pe.py  plot_fmri_motor.py  plot_fmri_surprise.py  plot_surprise.py  session-qc.py  surf_mapping.py
src/exd/: events.py  fmri_utils.py  main.py
src/exd/models/: delta_rule.py  ideal_observer.py  motor.py
