[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]


[project]
name = "exd"
version = "0.1.0"
authors = [
    { name = "Pierre-Louis Barbarant", email = "pierre-louis.barbarant@inria.fr" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "nilearn",
]
